Fix dark mode tab container tab width

--- a/src/components/SearchContainer/SearchContainer.module.css
+++ b/src/components/SearchContainer/SearchContainer.module.css
@@ -121,7 +121,7 @@
     white-space: nowrap;
     border-radius: 0;
     display: table-cell;
-    width: 35%;
+    width: 33.4%;
     text-align: center;
     background-color: #1D2735;
 }
